--- a/.github/workflows/SkyHawk-SHRP.yml
+++ b/.github/workflows/SkyHawk-SHRP.yml
@@ -20,7 +20,7 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree'
         required: true
-        default: 'https://github.com/TeamWin/android_device_samsung_m14x.git' 
+        default: 'https://github.com/TeamWin/android_device_samsung_m14x' 
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch'
         required: true
