--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -1,4 +1,4 @@
-name: OrangeFox [OFRP] - NON-VANILLA A-ONLY w/ ECHO DEBUG + ECHO BUTTON
+name: OrangeFox [OFRP] - NON-VANILLA A-ONLY + CRB TOOL ✅
 
 on:
   workflow_dispatch:
@@ -8,154 +8,179 @@ on:
         required: true
         default: '12.1'
         type: choice
-        options:
-        - 12.1
-        - 11.0
+        options: [12.1, 11.0]
       DEVICE_TREE:
-        description: 'Custom Recovery Tree'
+        description: 'Custom Recovery Tree *REQUIRED*'
         required: true
-        default: ''
       DEVICE_TREE_BRANCH:
-        description: 'Custom Recovery Tree Branch'
+        description: 'Device Tree Branch'
         required: true
-        default: ''
+        default: 'main'
       DEVICE_PATH:
-        description: 'Specify your device path.'
+        description: 'Device path'
         required: true
         default: 'device/samsung/m14x'
       DEVICE_NAME:
-        description: 'Specify your Device Codename.'
+        description: 'Device Codename'
         required: true
         default: 'm14x'
       BUILD_TARGET:
-        description: 'Specify your Build Target'
+        description: 'Build Target'
         required: true
         default: 'recovery'
         type: choice
-        options:
-        - boot
-        - recovery
-        - vendorboot
-      LDCHECK:
-        description: 'Path of blobs to check' 
-        required: true
-        default: 'system/bin/qseecomd'
-      RECOVERY_TAR:
-        description: 'Release recovery.tar For Samsung devices'
-        required: false
-        default: true
-        type: boolean
-      RECOVERY_INSTALLER:
-        description: 'Include recovery installer zip'
-        type: boolean
-        required: true
-        default: true
-      # 🔥 NON-VANILLA FLAGS
-      NON_VANILLA:
-        description: 'Non-Vanilla Build (GSI/AVB/CRB)'
-        required: false
-        default: true
-        type: boolean
-      A_ONLY:
-        description: 'A-Only Device (No A/B)'
-        required: false
-        default: true
-        type: boolean
-      SAMSUNG_VARIANT:
-        description: 'Samsung Variant'
-        required: false
-        default: true
-        type: boolean
-      # 🔥 ECHO DEBUG BUTTON
+        options: [boot, recovery, vendorboot]
       ECHO_DEBUG:
-        description: 'ECHO Flags Only (No Real Flags) - DEBUG MODE'
+        description: 'ECHO Flags Only (DEBUG)'
+        required: false
+        default: false
+        type: boolean
+      CRB_PREP:
+        description: 'Prepare CRB Kitchen Files'
         required: false
         default: false
         type: boolean
 
 jobs:
   build:
-    name: Build NON-VANILLA OFRP by ${{ github.actor }}
+    name: Build OFRP + CRB by ${{ github.actor }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    permissions:
-      contents: write
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Display Inputs + Flags
+    - name: Display Inputs
       run: |
-        echo "=== NON-VANILLA FLAGS ==="
-        echo "Non-Vanilla: ${{ github.event.inputs.NON_VANILLA }}"
-        echo "A-Only: ${{ github.event.inputs.A_ONLY }}"
-        echo "Samsung: ${{ github.event.inputs.SAMSUNG_VARIANT }}"
-        echo "ECHO DEBUG: ${{ github.event.inputs.ECHO_DEBUG }}"
         echo "Manifest: ${{ github.event.inputs.MANIFEST_BRANCH }}"
         echo "Device: ${{ github.event.inputs.DEVICE_NAME }}"
+        echo "ECHO DEBUG: ${{ github.event.inputs.ECHO_DEBUG }}"
+        echo "CRB PREP: ${{ github.event.inputs.CRB_PREP }}"
 
-    # ... [Keep all previous steps unchanged until INJECT FLAGS] ...
-
-    - name: 🔥 INJECT FLAGS (${{ github.event.inputs.ECHO_DEBUG && 'ECHO MODE' || 'REAL MODE' }})
+    - name: 🔥 Setup 24GB Swap (Manual)
       run: |
-        echo "⚙️  Injecting flags - MODE: ${{ github.event.inputs.ECHO_DEBUG && 'ECHO DEBUG' || 'REAL FLAGS' }}..."
-        cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/${{ github.event.inputs.DEVICE_PATH }}
-        
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "ECHO MODE: No real flags written!"' || 'cat >> BoardConfig.mk << EOF' }}
-        
-        # 🔥 NON-VANILLA ORANGEFOX FLAGS (A-Only Samsung M14x)
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "FOX_VARIANT := samsung"' || 'FOX_VARIANT := samsung' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "FOX_VANILLA_BUILD := 0"' || 'FOX_VANILLA_BUILD := 0' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER := 1"' || 'FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "FOX_USE_BASH_SHELL := 1"' || 'FOX_USE_BASH_SHELL := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "FOX_USE_NANO_EDITOR := 1"' || 'FOX_USE_NANO_EDITOR := 1' }}
+        sudo fallocate -l 24G /swapfile
+        sudo chmod 600 /swapfile
+        sudo mkswap /swapfile
+        sudo swapon /swapfile
+        echo 'vm.swappiness=10' | sudo tee -a /etc/sysctl.conf
+        sudo sysctl vm.swappiness=10
+        free -h
+        echo "✅ 24GB Swap ready!"
 
-        # A-Only (CRITICAL for M14x)
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "FOX_AB_DEVICE := 0"' || 'FOX_AB_DEVICE := 0' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_VIRTUAL_AB_DEVICE := 0"' || 'OF_VIRTUAL_AB_DEVICE := 0' }}
-
-        # AVB + GSI + CRB
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_PATCH_AVB20 := 1"' || 'OF_PATCH_AVB20 := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_SUPPORT_GSI_FLASHING := 1"' || 'OF_SUPPORT_GSI_FLASHING := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_NO_TREBLE_COMPATIBILITY_CHECK := 1"' || 'OF_NO_TREBLE_COMPATIBILITY_CHECK := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_CRYPTPOLICY := 1"' || 'OF_CRYPTPOLICY := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_FIX_7ZIP_ZIP := 1"' || 'OF_FIX_7ZIP_ZIP := 1' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "OF_ALLOW_NEW_PARTITION_SCHEME := 1"' || 'OF_ALLOW_NEW_PARTITION_SCHEME := 1' }}
-
-        # Samsung M14x Specific
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "TARGET_SCREEN_DENSITY := 400"' || 'TARGET_SCREEN_DENSITY := 400' }}
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "BOARD_KERNEL_CMDLINE += androidboot.selinux=permissive"' || 'BOARD_KERNEL_CMDLINE += androidboot.selinux=permissive' }}
-        
-        ${{ github.event.inputs.ECHO_DEBUG && 'echo "EOF"' || 'EOF' }}
-        
-        echo "✅ Flags injected (${{ github.event.inputs.ECHO_DEBUG && 'ECHO MODE' || 'REAL MODE' }})!"
-
-    - name: Building OrangeFox NON-VANILLA
+    - name: Build Environment + CRB Tools
       run: |
-        echo "🔨 Starting NON-VANILLA build..."
-        cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
+        sudo apt update && sudo apt install -y git bc bison flex libssl-dev \
+        python3 python2 ccache repo make clang lld zip unzip wget bc python-is-python3
+        git clone https://gitlab.com/OrangeFox/misc/scripts
+        cd scripts && sudo bash setup/android_build_env.sh
+        
+        if [ "${{ github.event.inputs.CRB_PREP }}" = "true" ]; then
+          mkdir -p crb-output
+          echo "✅ CRB Kitchen prep enabled!"
+        fi
+
+    - name: Sync OrangeFox (${{ github.event.inputs.MANIFEST_BRANCH }})
+      run: |
+        mkdir -p OrangeFox
+        cd OrangeFox
+        git clone https://gitlab.com/OrangeFox/sync.git
+        cd sync
+        ./orangefox_sync.sh --branch ${{ github.event.inputs.MANIFEST_BRANCH }} \
+          --path fox_${{ github.event.inputs.MANIFEST_BRANCH }}
+
+    - name: Clone Device Tree
+      run: |
+        cd OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
+        git clone ${{ github.event.inputs.DEVICE_TREE }} \
+          -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} \
+          ${{ github.event.inputs.DEVICE_PATH }}
+        echo "✅ Device tree cloned!"
+
+    - name: 🔥 INJECT FLAGS (Method 4 - Array + Loop)
+      run: |
+        MODE="${{ github.event.inputs.ECHO_DEBUG && 'ECHO' || 'REAL' }}"
+        echo "Injecting flags - $MODE MODE"
+        cd "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/${{ github.event.inputs.DEVICE_PATH }}"
+        
+        if [ "$MODE" = "REAL" ]; then
+          FLAGS=(
+            "FOX_VARIANT := samsung"
+            "FOX_VANILLA_BUILD := 0"
+            "FOX_AB_DEVICE := 0"
+            "OF_PATCH_AVB20 := 1"
+            "OF_SUPPORT_GSI_FLASHING := 1"
+            "FOX_USE_NANO_EDITOR := 1"
+            "OF_CRYPTPOLICY := 1"
+            "OF_FIX_7ZIP_ZIP := 1"
+            "OF_USE_GREEN_LED := 1"
+          )
+          
+          for flag in "${FLAGS[@]}"; do
+            echo "$flag" >> BoardConfig.mk
+          done
+          echo "✅ REAL FLAGS injected (${#FLAGS[@]} total)!"
+        else
+          ECHO_FLAGS=(
+            "echo FOX_VARIANT := samsung"
+            "echo FOX_VANILLA_BUILD := 0"
+            "echo FOX_AB_DEVICE := 0"
+          )
+          
+          for eflag in "${ECHO_FLAGS[@]}"; do
+            echo "$eflag" >> BoardConfig.mk
+          done
+          echo "✅ ECHO MODE injected (${#ECHO_FLAGS[@]} lines)!"
+        fi
+        
+        echo "📋 BoardConfig.mk preview:"
+        tail -10 BoardConfig.mk
+
+    - name: Build OrangeFox
+      run: |
+        cd "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}"
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
-        
-        echo "📤 Exporting environment flags..."
         export FOX_VARIANT=samsung
         export FOX_VANILLA_BUILD=0
         export FOX_AB_DEVICE=0
-        export OF_PATCH_AVB20=1
-        export OF_SUPPORT_GSI_FLASHING=1
-        export OF_CRYPTPOLICY=1
-        export FOX_USE_NANO_EDITOR=1
         
-        echo "🍽️ Lunch: twrp_${{ github.event.inputs.DEVICE_NAME }}-eng"
+        echo "Available lunch combos:"
+        lunch | grep ${{ github.event.inputs.DEVICE_NAME }} || true
+        
         lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng
-        
-        echo "🧹 Cleaning previous builds..."
-        make clean
-        
-        echo "🚀 Building ${{ github.event.inputs.BUILD_TARGET }}image..."
         mka ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
-        echo "✅ NON-VANILLA A-Only OFRP COMPLETE!"
 
-    # ... [Keep rest unchanged] ...
+    - name: 🔥 CRB Kitchen Package (If Enabled)
+      if: github.event.inputs.CRB_PREP == 'true'
+      run: |
+        echo "📦 Creating CRB-ready package..."
+        mkdir -p crb-output/${{ github.event.inputs.DEVICE_NAME }}
+        
+        cp OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.img \
+          crb-output/${{ github.event.inputs.DEVICE_NAME }}/
+        
+        mkdir -p crb-output/${{ github.event.inputs.DEVICE_NAME }}/ORIGINAL_UPDATE
+        cp "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/${{ github.event.inputs.DEVICE_PATH }}/BoardConfig.mk" \
+          crb-output/${{ github.event.inputs.DEVICE_NAME }}/BoardConfig.mk
+        
+        cd crb-output
+        zip -r "${{ github.event.inputs.DEVICE_NAME }}-CRB-Package.zip" ${{ github.event.inputs.DEVICE_NAME }}/
+        echo "✅ CRB package: ${{ github.event.inputs.DEVICE_NAME }}-CRB-Package.zip"
+
+    - name: Upload Artifacts
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: OrangeFox-${{ github.event.inputs.DEVICE_NAME }}-${{ github.event.inputs.MANIFEST_BRANCH }}
+        path: |
+          OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.img
+          OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.zip
+          crb-output/*.zip
+
+    - name: Cleanup Swap
+      if: always()
+      run: |
+        sudo swapoff /swapfile
+        sudo rm -f /swapfile
+        echo "🧹 Swap cleaned up"
