--- a/.github/workflows/A.yml
+++ b/.github/workflows/A.yml
@@ -1,4 +1,4 @@
-name: OrangeFox [OFRP] - NON-VANILLA A-ONLY + CRB TOOL ✅ FIXED
+name: OrangeFox [OFRP] - NON-VANILLA A-ONLY + CRB TOOL ✅ DISK FIXED
 
 on:
   workflow_dispatch:
@@ -47,28 +47,37 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
-    - name: 🔥 MAXIMIZE DISK SPACE (6GB FREE)
-      uses: easimon/maximize-build-space@v1
-      with:
-        root-reserve-mb: 512
-        swap-size-mb: 4096
-        remove-dotnet: 'true'
-        remove-uwp: 'true'
-
-    - name: Disk Check Before
+    - name: 🔥 Manual Disk Cleanup (SAFE)
       run: |
-        df -h
-        free -h
+        # Safe cleanup - no filesystem creation
+        sudo rm -rf /usr/share/dotnet /opt/hostedtoolcache /usr/local/lib/android
+        sudo apt clean
+        docker system prune -af || true
+        df -h .
+        echo "✅ Disk cleaned (no lost+found created)"
 
-    - name: Checkout
+    - name: 🔥 8GB Swap (Safe)
+      run: |
+        sudo fallocate -l 8G /swapfile
+        sudo chmod 600 /swapfile
+        sudo mkswap /swapfile
+        sudo swapon /swapfile
+        echo 'vm.swappiness=10' | sudo tee -a /etc/sysctl.conf
+        free -h
+        echo "✅ 8GB Swap ready!"
+
+    - name: Checkout (Now Safe)
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 1
 
     - name: Display Inputs
       run: |
         echo "Manifest: ${{ github.event.inputs.MANIFEST_BRANCH }}"
         echo "Device: ${{ github.event.inputs.DEVICE_NAME }}"
-        echo "ECHO DEBUG: ${{ github.event.inputs.ECHO_DEBUG }}"
-        echo "CRB PREP: ${{ github.event.inputs.CRB_PREP }}"
+        echo "ECHO: ${{ github.event.inputs.ECHO_DEBUG }}"
+        echo "CRB: ${{ github.event.inputs.CRB_PREP }}"
+        df -h .
 
     - name: Build Environment
       run: |
@@ -76,9 +85,6 @@ jobs:
         python3 python-is-python3 ccache repo make clang lld zip unzip wget
         git clone https://gitlab.com/OrangeFox/misc/scripts
         cd scripts && sudo bash setup/android_build_env.sh
-        
-        # Clean cache early
-        sudo rm -rf /usr/local/lib/python3.*/site-packages/* || true
 
     - name: Sync OrangeFox (${{ github.event.inputs.MANIFEST_BRANCH }})
       run: |
@@ -88,8 +94,7 @@ jobs:
         cd sync
         ./orangefox_sync.sh --branch ${{ github.event.inputs.MANIFEST_BRANCH }} \
           --path fox_${{ github.event.inputs.MANIFEST_BRANCH }}
-        
-        echo "Disk after sync:"
+        echo "✅ Sync complete"
         df -h .
 
     - name: Clone Device Tree
@@ -100,41 +105,46 @@ jobs:
           ${{ github.event.inputs.DEVICE_PATH }}
         echo "✅ Device tree cloned!"
 
-    - name: 🔥 INJECT FLAGS (Method 4)
+    - name: 🔥 INJECT FLAGS (Method 4 - Compact)
       run: |
         MODE="${{ github.event.inputs.ECHO_DEBUG && 'ECHO' || 'REAL' }}"
         cd "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/${{ github.event.inputs.DEVICE_PATH }}"
         
         if [ "$MODE" = "REAL" ]; then
-          FLAGS=(
-            "FOX_VARIANT := samsung"
-            "FOX_VANILLA_BUILD := 0"
-            "FOX_AB_DEVICE := 0"
-            "OF_PATCH_AVB20 := 1"
-            "OF_SUPPORT_GSI_FLASHING := 1"
-            "FOX_USE_NANO_EDITOR := 1"
-          )
-          for flag in "${FLAGS[@]}"; do echo "$flag" >> BoardConfig.mk; done
-          echo "✅ REAL FLAGS (${#FLAGS[@]})"
+          printf '%s
+' \
+            "FOX_VARIANT := samsung" \
+            "FOX_VANILLA_BUILD := 0" \
+            "FOX_AB_DEVICE := 0" \
+            "OF_PATCH_AVB20 := 1" \
+            "OF_SUPPORT_GSI_FLASHING := 1" \
+            "FOX_USE_NANO_EDITOR := 1" \
+            "" >> BoardConfig.mk
+          echo "✅ REAL FLAGS (6)"
         else
-          for flag in "echo FOX_VARIANT := samsung" "echo FOX_VANILLA_BUILD := 0"; do
-            echo "$flag" >> BoardConfig.mk
-          done
+          printf '%s
+' \
+            "# ECHO DEBUG MODE" \
+            "echo FOX_VARIANT := samsung" \
+            "echo FOX_VANILLA_BUILD := 0" \
+            "" >> BoardConfig.mk
           echo "✅ ECHO MODE"
         fi
-        tail -7 BoardConfig.mk
+        tail -8 BoardConfig.mk
 
     - name: Build OrangeFox
       run: |
         cd "OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}"
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
-        lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng || lunch 1
         
-        echo "Building ${{ github.event.inputs.BUILD_TARGET }}..."
+        echo "Available targets:"
+        lunch | grep -i ${{ github.event.inputs.DEVICE_NAME }} || echo "Using default"
+        
+        lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng || lunch 1
         mka ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
 
-    - name: 🔥 CRB Package
+    - name: 🔥 CRB Package (If Enabled)
       if: github.event.inputs.CRB_PREP == 'true'
       run: |
         mkdir -p crb-output/${{ github.event.inputs.DEVICE_NAME }}
@@ -151,10 +161,11 @@ jobs:
           OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.img
           OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.zip
           crb-output/*.zip
-        retention-days: 7
+        retention-days: 5
 
-    - name: Final Disk Check
+    - name: Cleanup
       if: always()
       run: |
-        df -h
-        du -sh OrangeFox/ || true
+        sudo swapoff /swapfile || true
+        sudo rm -f /swapfile
+        echo "✅ Cleanup complete"
